--- a/Panier.html
+++ b/Panier.html
@@ -15,7 +15,7 @@
             <!-- Navigation principale -->
             <ul class="menu">
                 <li><a href="Panier.html">PANIER</a></li>
-                <li><a href="AnimeGem.html">ACCUEIL</a></li>
+                <li><a href="index.html">ACCUEIL</a></li>
                 <li><a href="Contact.html">CONTACT</a></li>
             </ul>
             <button id="theme-toggle">Clair/Sombre</button> 
