--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
 
         <section id="themes" class="themes">
+            <h2>Nos gammes de bijoux :</h2>
             <!-- Section des thèmes (liens vers les pages des différents anime) -->
             <div id="themes-1" class="themes">
                 <a href="Bleach.html">
@@ -38,6 +39,7 @@
                     <img src="Images/PageAccueil/BleachAccueil.png" alt="Image Bleach" width="239" height="308">
                     <!-- Image cliquable pour Bleach -->
                 </a>
+                <h3>Bleach</h3>
             </div>
             <div id="themes-2" class="themes">
                 <a href="Naruto.html">
@@ -45,6 +47,7 @@
                     <img src="Images/PageAccueil/NarutoAccueil.webp" alt="Image Naruto" width="239" height="308">
                     <!-- Image cliquable pour Naruto -->
                 </a>
+                <h3>Naruto</h3>
             </div>
             <div id="themes-3" class="themes">
                 <a href="OnePiece.html">
@@ -52,6 +55,7 @@
                     <img src="Images/PageAccueil/OnePieceAccueil.png" alt="Image One Piece" width="239" height="308">
                     <!-- Image cliquable pour One Piece -->
                 </a>
+                <h3>One Piece</h3>
             </div>
         </section>
     </main>
