--- a/Contact.html
+++ b/Contact.html
@@ -21,6 +21,7 @@
         </nav>
         <button id="theme-toggle">Clair/Sombre</button>
         <!-- Bouton pour permettre de basculer entre les modes clair et sombre. -->
+        <button id="style-toggle">Changer de style</button>
     </header>
     <main>
         <!-- Section principale du contenu de la page -->
@@ -54,5 +55,8 @@
     <!-- Script JavaScript pour gérer les fonctionnalités générales du site -->
     <script src="JavaScript/theme.js"></script>
     <!-- Script JavaScript pour gérer le changement de thème (clair/sombre) -->
+    <script src="JavaScript/changeStyle.js"></script>
+    <!-- Script JavaScript pour gérer le changement de style -->
 </body>
 </html>
+
