--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
         <button id="theme-toggle">Clair/Sombre</button>
         <!-- Bouton pour permettre de basculer entre les modes clair et sombre. -->
+        <button id="style-toggle">Changer de style</button>
     </header>
     <main>
         <h1> AnimeGem</h1>
@@ -72,5 +73,8 @@
     <!-- Script pour gérer les interactions générales du site -->
     <script src="JavaScript/theme.js"></script>
     <!-- Script pour gérer le changement de thème (clair/sombre) -->
+    <script src="JavaScript/changeStyle.js"></script>
+    <!-- Script JavaScript pour gérer le changement de style -->
 </body>
 </html>
+
