--- a/Naruto.html
+++ b/Naruto.html
@@ -21,6 +21,7 @@
         </nav>
         <button id="theme-toggle">Clair/Sombre</button>
         <!-- Bouton pour permettre de basculer entre les modes clair et sombre. -->
+        <button id="style-toggle">Changer de style</button>
     </header>
     <main>
         <h1> Naruto</h1>
@@ -66,5 +67,7 @@
     <!-- Script JavaScript spécifique pour gérer l'ajout des produits au panier -->
     <script src="JavaScript/theme.js"></script>
     <!-- Script JavaScript pour gérer le changement de thème (clair/sombre) -->
+    <script src="JavaScript/changeStyle.js"></script>
+    <!-- Script JavaScript pour gérer le changement de style -->
 </body>
 </html>
