--- a/Panier.html
+++ b/Panier.html
@@ -20,6 +20,7 @@
             </ul>
             <button id="theme-toggle">Clair/Sombre</button> 
             <!-- Bouton pour permettre de basculer entre les modes clair et sombre. -->
+            <button id="style-toggle">Changer de style</button>
         </nav>
     </header>
     <main>
@@ -52,5 +53,7 @@
     <!--  -->
     <script src="JavaScript/theme.js"></script>
     <!-- Script JavaScript pour gérer le changement de thème (clair/sombre) -->
+    <script src="JavaScript/changeStyle.js"></script>
+    <!-- Script JavaScript pour gérer le changement de style -->
 </body>
 </html>
