--- a/Contact.html
+++ b/Contact.html
@@ -47,6 +47,8 @@
     <footer>
         <!-- Le pied de page du site -->
         <p>©<span id="year">2024</span>, AnimeGem.</p>
+        <a href="https://www.instagram.com/animegem.officiel/"  class="fa-brands fa-square-instagram"></a>
+        <a href="https://www.youtube.com/@animegem.officiel" class="fa-brands fa-youtube"></a>
     </footer>
     <button id="scroll-to-top" title="Revenir en haut">↑</button>
     <!-- Bouton qui permet de revenir en haut de la page, il sera probablement affiché à l'aide de JavaScript -->
