--- a/Panier.html
+++ b/Panier.html
@@ -42,6 +42,8 @@
     <footer>
         <!-- Le pied de page du site -->
         <p>©<span id="year">2024</span>, AnimeGem.</p>
+        <a href="https://www.instagram.com/animegem.officiel/"  class="fa-brands fa-square-instagram"></a>
+        <a href="https://www.youtube.com/@animegem.officiel" class="fa-brands fa-youtube"></a>
     </footer>
 
     <button id="scroll-to-top" title="Revenir en haut">↑</button>
