--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
     <footer>
         <!-- Pied de page -->
-        <p>©<span id="year">2024</span>, AnimeGem.</p>
+        <p>©<span id="year">2024</span>, AnimeGem.</p><a href="https://www.instagram.com/animegem.officiel/"  class="fa-brands fa-square-instagram"></a>
+        <a href="https://www.youtube.com/@animegem.officiel" class="fa-brands fa-youtube"></a>
     </footer>
 
     <button id="scroll-to-top" title="Revenir en haut">↑</button>
