--- a/Bleach.html
+++ b/Bleach.html
@@ -31,6 +31,7 @@
             <img src="Images/PageBleach/ImageBleachProduit.avif" alt="Image Bleach">
         </div>
         <section id="produits" class="produits">
+            <h2> Nos produits</h2>
             <!-- Section qui contient les produits associés à l'anime "Bleach" -->
             <div class="produits">
                 <img src="Images/PageBleach/BraceletTresseUrahara.jpg" alt="Bracelet Tressé Urahara" width="239" height="308">
