--- a/OnePiece.html
+++ b/OnePiece.html
@@ -30,6 +30,7 @@
             <img src="Images/PageOnePiece/ImageOnePieceProduit.jpg" alt="Image One Piece">
         </div>
         <section id="produits" class="produits">
+            <h2> Nos produits</h2>
             <!-- Section qui contient les produits associés à l'anime "One Piece" -->
             <div class="produits">
                 <img src="Images/PageOnePiece/BraceletJollyRogerArgent.webp" alt="Bracelet Jolly Roger Argent" width="239" height="308">
