--- a/Naruto.html
+++ b/Naruto.html
@@ -30,6 +30,7 @@
             <img src="Images/PageNaruto/ImageNarutoProduit.png" alt="Image Naruto">
         </div>
         <section id="produits" class="produits">
+            <h2> Nos produits</h2>
             <!-- Section qui contient les produits associés à l'anime "Naruto" -->
             <div class="produits">
                 <img src="Images/PageNaruto/BraceletBandeauKonoha.webp" alt="Bracelet Bandeau Konoha" width="239" height="308">
