--- a/Contact.html
+++ b/Contact.html
@@ -28,6 +28,7 @@
         <!-- Section principale du contenu de la page -->
         <h1> Contact</h1>
         <section id="contact">
+            <h2>Contactez-nous</h2>
             <!-- Formulaire de contact -->
             <form action="https://formspree.io/f/meoopgvv" method="POST">
                 <!-- Le formulaire envoie les données -->
