--- a/Panier.html
+++ b/Panier.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <!-- Contenu principal de la page -->
-        <h1> Panier</h1>
+        <h1> AnimeGem</h1>
         <section class="contenuPanier">
             <h2>Votre panier</h2>
             <div id="produitPanier">
