--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <!-- Section principale du contenu de la page -->
-        <h1> Contact</h1>
+        <h1> AnimeGem</h1>
         <section id="contact">
             <h2>Contactez-nous</h2>
             <!-- Formulaire de contact -->
