--- a/Bleach.html
+++ b/Bleach.html
@@ -37,21 +37,21 @@
                 <img src="Images/PageBleach/BraceletTresseUrahara.jpg" alt="Bracelet Tressé Urahara" width="239" height="308">
                 <p class="nom">Bracelet Tressé Urahara</p>
                 <p class="prix">9,99 €</p>
-                <button class="ajouteraupanier" data-id="1.1" data-name="Bracelet Tressé Urahara" data-price="9.99">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="1.1" data-name="Bracelet Tressé Urahara" data-price="9.99" data-image="Images/PageBleach/BraceletTresseUrahara">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
             <div class="produits">
                 <img src="Images/PageBleach/CollierShinigami.jpg" alt="Collier Shinigami" width="239" height="308">
                 <p class="nom">Collier Shinigami</p>
                 <p class="prix">21,90 €</p>
-                <button class="ajouteraupanier" data-id="1.2" data-name="Collier Shinigami" data-price="21.90">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="1.2" data-name="Collier Shinigami" data-price="21.90" data-image="Images/PageBleach/CollierShinigami.jpg">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
             <div class="produits">
                 <img src="Images/PageBleach/BagueIchigo.jpg" alt="Bague Ichigo" width="239" height="308">
                 <p class="nom">Bague Ichigo</p>
                 <p class="prix">59,95 €</p>
-                <button class="ajouteraupanier" data-id="1.3" data-name="Bague Ichigo" data-price="59.95">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="1.3" data-name="Bague Ichigo" data-price="59.95" data-image="Images/PageBleach/BagueIchigo.jpg">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
         </section>
