--- a/Naruto.html
+++ b/Naruto.html
@@ -36,21 +36,21 @@
                 <img src="Images/PageNaruto/BraceletBandeauKonoha.webp" alt="Bracelet Bandeau Konoha" width="239" height="308">
                 <p class="nom">Bracelet Bandeau de Konoha</p>
                 <p class="prix">21,00 €</p>
-                <button class="ajouteraupanier" data-id="2.1" data-name="Bracelet Bandeau de Konoha" data-price="21.00">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="2.1" data-name="Bracelet Bandeau de Konoha" data-price="21.00" data-image="Images/PageNaruto/BraceletBandeauKonoha.webp">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
             <div class="produits">
                 <img src="Images/PageNaruto/CollierHokage.webp" alt="Collier Hokage" width="239" height="308">
                 <p class="nom">Collier Hokage</p>
                 <p class="prix">23,00 €</p>
-                <button class="ajouteraupanier" data-id="2.2" data-name="Collier Hokage" data-price="23.00">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="2.2" data-name="Collier Hokage" data-price="23.00" data-image="Images/PageNaruto/CollierHokage.webp">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
             <div class="produits">
                 <img src="Images/PageNaruto/BagueRinnegan.jpg" alt="Bague Rinnegan" width="239" height="308">
                 <p class="nom">Bague Rinnegan</p>
                 <p class="prix">2,25 €</p>
-                <button class="ajouteraupanier" data-id="2.3" data-name="Bague Rinnegan" data-price="2.25">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="2.3" data-name="Bague Rinnegan" data-price="2.25" data-image="Images/PageNaruto/BagueRinnegan.jpg">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
         </section>
