--- a/OnePiece.html
+++ b/OnePiece.html
@@ -36,21 +36,21 @@
                 <img src="Images/PageOnePiece/BraceletJollyRogerArgent.webp" alt="Bracelet Jolly Roger Argent" width="239" height="308">
                 <p class="nom">Bracelet Jolly Roger Argent</p>
                 <p class="prix">24,90 €</p>
-                <button class="ajouteraupanier" data-id="3.1" data-name="Bracelet Jolly Roger Argent" data-price="24.90">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="3.1" data-name="Bracelet Jolly Roger Argent" data-price="24.90" data-image="Images/PageOnePiece/BraceletJollyRogerArgent.webp">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
             <div class="produits">
                 <img src="Images/PageOnePiece/CollierWanted.webp" alt="Collier Wanted" width="239" height="308">
                 <p class="nom">Collier Wanted</p>
                 <p class="prix">24,00 €</p>
-                <button class="ajouteraupanier" data-id="3.2" data-name="Collier Wanted" data-price="24.00">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="3.2" data-name="Collier Wanted" data-price="24.00" data-image="Images/PageOnePiece/CollierWanted.webp">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
             <div class="produits">
                 <img src="Images/PageOnePiece/BagueLaw.webp" alt="Bague Law" width="239" height="308">
                 <p class="nom">Bague Law</p>
                 <p class="prix">14,99 €</p>
-                <button class="ajouteraupanier" data-id="3.3" data-name="Bague Law" data-price="14.99">AJOUTER AU PANIER +</button>
+                <button class="ajouteraupanier" data-id="3.3" data-name="Bague Law" data-price="14.99" data-image="Images/PageOnePiece/BagueLaw.webp">AJOUTER AU PANIER +</button>
                 <!-- Bouton pour ajouter le produit au panier -->
             </div>
         </section>
