--- a/OnePiece.html
+++ b/OnePiece.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Rend le site responsive -->
+    <!-- Description de la page pour les moteurs de recherche -->
     <title>AnimeGem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Icône de la page (favicon), affichée dans l'onglet du navigateur -->
