--- a/Panier.html
+++ b/Panier.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Description de la page pour les moteurs de recherche -->
+    <meta name="description" content="Consultez votre panier AnimeGem pour voir les bijoux inspirés des plus grands animes que vous avez sélectionnés. Finalisez votre achat facilement.">
     <title>AnimeGem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Icône de la page (favicon), affichée dans l'onglet du navigateur -->
