--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Description de la page pour les moteurs de recherche -->
+    <meta name="description" content="Contactez AnimeGem pour toute question ou demande concernant nos bijoux inspirés des univers d'anime. Remplissez notre formulaire en ligne, et nous vous répondrons rapidement.">
     <title>AnimeGem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Icône de la page (favicon), affichée dans l'onglet du navigateur -->
