--- a/Naruto.html
+++ b/Naruto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Description de la page pour les moteurs de recherche -->
+    <meta name="description" content="Plongez dans l'univers de Naruto avec notre collection exclusive de bijoux : bracelet bandeau Konoha, collier Hokage, et bague Rinnegan. Parfaits pour les fans !">
     <title>AnimeGem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Icône de la page (favicon), affichée dans l'onglet du navigateur -->
