--- a/OnePiece.html
+++ b/OnePiece.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Description de la page pour les moteurs de recherche -->
+    <meta name="description" content="Plongez dans l'univers de One Piece avec notre collection exclusive de bijoux : bracelet Jolly Roger Argent, collier Wanted, et bague Law. Parfaits pour les fans !">
     <title>AnimeGem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Icône de la page (favicon), affichée dans l'onglet du navigateur -->
