--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Description de la page pour les moteurs de recherche -->
+    <meta name="description" content="Bienvenue sur AnimeGem, la boutique idéale pour les passionnés d'animes ! Explorez nos collections inspirées de Bleach, Naruto et One Piece, et trouvez des bijoux uniques.">
     <title>AnimeGem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Icône de la page (favicon), affichée dans l'onglet du navigateur -->
